# SOEM

./: CMakeLists.txt
test/linux/cat_test_4/: set.h
test/linux/proxima_robot/: proxima_robot.cpp  set.h
test/linux/single_gomotor/: CMakeLists.txt  get.h  single_gomotor.cpp
